# tessera

./: .env.example  .envrc  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
assets/imgs/logos/: logo-ascii.html  logo.txt
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: cli.md
docs/user-guide/: agents.md  configuration.md  tools.md
examples/: slack_approval_demo.py  slack_approval_invoke.py
examples/examples/: 1password_example.py  basic_supervisor.py  check_models_endpoint.py  copilot_proxy_example.py  debug_parsing.py  debug_table_parsing.py  demo_premium_parsing.py  interviewer_evaluation.py  panel_interview.py  rate_limit_stress_test.py  retry_and_rate_limiting_example.py  test_hash_optimization.py  test_parsing_vs_fallback.py  test_premium_blocking.py  verify_parsing.py
src/tessera/: __init__.py  copilot_proxy.py  graph_base.py  interviewer.py  interviewer_graph.py  legacy_config.py  llm.py  logging_config.py  model_validator.py  models.py  panel.py  panel_graph.py  premium_models.py  secrets.py  slack_approval.py  supervisor.py  supervisor_graph.py
src/tessera/cli/: __init__.py  main.py  multi_agent_execution.py
src/tessera/config/: __init__.py  defaults.yaml  schema.py  subphase_models.py  xdg.py  yaml_source.py
src/tessera/observability/: __init__.py  callbacks.py  cost.py  metrics.py  tracer.py
src/tessera/slack/: __init__.py  agent_identity.py  multi_channel.py
src/tessera/workflow/: __init__.py  agent_pool.py  multi_agent_executor.py  phase_executor.py  subphase_handler.py  task_queue.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_config_schema.py  test_copilot_proxy.py  test_integration.py  test_interviewer.py  test_interviewer_graph.py  test_llm.py  test_model_validator.py  test_models.py  test_models_extended.py  test_multi_agent_executor.py  test_observability.py  test_panel.py  test_panel_graph.py  test_secrets.py  test_slack_approval.py  test_slack_integration.py  test_supervisor.py  test_supervisor_basic.py  test_supervisor_graph.py  test_tracer.py  test_workflow.py
